# sql-cli-py

./: .gitignore  connections.py  layout.tcss  main.py  pyproject.toml  test.db  test.py
components/: menu.py
components/screens/: delete_screen.py  edit_connection.py  new_connection.py  quit_screen.py
connection/: conn.py  connection.py
connectors/: connector.py  connector_resolver.py  dbmodel.py  dummy_connector.py  exceptions.py  postgres_connector.py  sqlite_connector.py
screens/: new_connection.py
util/: bindings.py  conn_file.py  crypto.py  model.py  util.py
